--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store": "^18.1.0",
     "@ngrx/store-devtools": "^18.1.0",
     "@popperjs/core": "^2.11.8",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.2.8",
     "@angular/cli": "^18.2.8",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
