--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store-devtools": "^18.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
