--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ngrx/store": "^18.1.0",
     "@ngrx/store-devtools": "^18.1.0",
     "@popperjs/core": "^2.11.8",
+    "@types/chart.js": "^2.9.41",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
