--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@ngrx/store-devtools": "^18.1.0",
     "@popperjs/core": "^2.11.8",
     "@types/chart.js": "^2.9.41",
+    "@types/intl-tel-input": "^18.1.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "intl-tel-input": "^24.7.0",
     "ng2-charts": "^6.0.1",
+    "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
